* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-20.
+2004-05-22.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,6 +19,7 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.BeanInfoEmbryo</td> <td class="needsmerge"><a href="compare/gnu.java.beans.BeanInfoEmbryo.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.EncodingManager</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.PlatformHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.lang.CharData</td> <td class="needsmerge"><a href="compare/gnu.java.lang.CharData.diff">Diff</a></td> </tr>
@@ -49,6 +50,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.applet.Applet</td> <td class="needsmerge"><a href="compare/java.applet.Applet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Toolkit</td> <td class="needsmerge"><a href="compare/java.awt.Toolkit.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.Arc2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Arc2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.im.InputContext</td> <td class="needsmerge"><a href="compare/java.awt.im.InputContext.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
@@ -58,6 +60,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.io.OutputStreamWriter</td> <td class="needsmerge"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.PrintStream</td> <td class="needsmerge"><a href="compare/java.io.PrintStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.RandomAccessFile</td> <td class="needsmerge"><a href="compare/java.io.RandomAccessFile.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.SequenceInputStream</td> <td class="needsmerge"><a href="compare/java.io.SequenceInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.io.VMObjectStreamClass</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.io.Writer</td> <td class="needsmerge"><a href="compare/java.io.Writer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Character</td> <td class="needsmerge"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
@@ -100,6 +103,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.DecimalFormat</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.SimpleDateFormat</td> <td class="needsmerge"><a href="compare/java.text.SimpleDateFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -116,6 +120,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.util.zip.ZipOutputStream</td> <td class="needsmerge"><a href="compare/java.util.zip.ZipOutputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.imageio.IIOException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadUpdateListener</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -135,6 +140,8 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ValueHandler</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.PortableRemoteObject</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.tree.DefaultMutableTreeNode</td> <td class="needsmerge"><a href="compare/javax.swing.tree.DefaultMutableTreeNode.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -165,6 +172,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.xml.transform.sax.TransformerHandler</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamResult</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamSource</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkPopupMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkPopupMenuPeer.c.diff">Diff</a></td> </tr>
 </table>
