Update gcc-bugs description.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -50,8 +50,8 @@ as well as in
   or using GCC.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a></b>
-  is a relatively high volume list for bug reports and general discussion
-  about bugs in GCC.</li>
+  is a relatively high volume list with mails from our Bugzilla
+  bug-tracking system.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
