--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -79,7 +79,9 @@ as well as in
 
   <li><b><a href="http://gcc.gnu.org/ml/fortran/">fortran</a></b>
   is the main discussion and development list for the Fortran language
-  front end of GCC, and the corresponding runtime library.</li>
+  front end of GCC, and the corresponding runtime library.  Patches to
+  gfortran and libgfortran should go to both this list and
+  <b>gcc-patches</b>.</li>
 </ul>
 
 <p>Read only lists:</p>
