Documented new policy about setting milestones

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -205,8 +205,10 @@ marked as such.  The summary line should read</p>
 severity "<strong>critical</strong>" to bring it to attention. It may
 be downgraded later if a defect is not important enough to justify
 "critical" severity. In addition the target milestone should be set
-to the next release that needs fixing. The milestone can be changed
-by the release manager and his/her delegates.</p>
+to the next release of the newest active release branch that needs
+fixing (the rationale is that a patch will have to go to the newest
+release branch before any other release branch). The milestone can
+be changed by the release manager and his/her delegates.</p>
 
 <p><strong>If a patch fixing a PR has been submitted</strong>, a link
 to the message with the patch should be added to the PR, as well as the
