Prepare for the GCC 3.4.1 release.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -1123,9 +1123,6 @@ and not your code, that is broken.</em></p>
 
 <hr />
 <h2><a name="3.4.0">GCC 3.4.0</a></h2>
-<p>
-Detailed release notes for the GCC 3.4.0 release follow.
-</p>
 
 <h3>Bug Fixes</h3>
 
@@ -1136,7 +1133,10 @@ complete list here.
 href="http://gcc.gnu.org/bugzilla/buglist.cgi?short_desc_type=notregexp&amp;short_desc=%5C%5B3%5C.4.*%5BRr%5Degression&amp;target_milestone=3.4.0&amp;bug_status=RESOLVED&amp;resolution=FIXED">Follow
 this link</a> to query the Bugzilla database for the list of over 900 bugs
 fixed in 3.4.0.  This is the list of all bugs marked as resolved and fixed
-in 3.4.0 that are not flagged as 3.4 regressions.
-</p>
+in 3.4.0 that are not flagged as 3.4 regressions.</p>
+
+<hr />
+<h2><a name="3.4.1">GCC 3.4.1</a></h2>
+
 </body>
 </html>
