updated for separate internationalization of gcc and cpplib.

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -55,7 +55,8 @@ directory in the <code>gccadmin</code> account, to update the version
 actually called from cron.)</li>
 
 <li><a href="translation.html#regen">Regenerate
-<code>gcc.pot</code></a> and <a href="translation.html#submit">send it
+<code>gcc.pot</code></a> and <code>cpplib.pot</code>.
+<a href="http://gcc.gnu.org/translation.html#submit">Send them
 to the translation project</a>.</li>
 
 <li>Update the file <code>gcc/configure.in</code> so that
