--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -26,7 +26,7 @@ release branch.</li>
 translations</a> and commit them to the release branch (and to
 mainline if it is the most recent release branch).  <a
 href="translation.html#regen">Regenerate
-<code>gcc.pot</code></a>.</li>
+<code>gcc.pot</code></a> and <code>cpplib.pot</code>.</li>
 </ol>
 
 
