Reflect that lno-branch is no longer based on tree-ssa.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -172,8 +172,8 @@ particular releases or snapshots or the latest snapshot.  </p>
   the pre-merge freeze.</dd>
 
   <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt>
-  <dd>A sub-branch of tree-ssa that aims at implementing a loop
-  nest optimizer at the tree level.</dd>
+  <dd>This branch aims at implementing a loop nest optimizer at the
+  tree level.</dd>
 
   <dt><a href="projects/strees/index.html">stree-branch</a></dt>
   <dd>This branch is for improving compilation speed and reducing memory
