--- a/htdocs/projects/tree-ssa/lno.html
+++ b/htdocs/projects/tree-ssa/lno.html
@@ -7,8 +7,7 @@
 <h1>Loop Nest Optimizer</h1>
 
 <p>This project aims at implementing a loop nest optimizer at the tree
-level.  The <code>lno-branch</code> is based on the 
-<a href="./">tree-ssa-20020619-branch</a>.</p>
+level.</p>
 
 <h2>Passes in the branch</h2>
 <dl>
