--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -602,11 +602,11 @@ and not your code, that is broken.</em></p>
 	  {
 	    &amp;A::pub_func;   // OK, pub_func is accessible through A
 	    &amp;A::prot_func;  // error, cannot access prot_func through A
-	    &amp;A::priv_func;  // error, cannot access prot_func through A
+	    &amp;A::priv_func;  // error, cannot access priv_func through A
 
 	    &amp;B::pub_func;   // OK, pub_func is accessible through B
 	    &amp;B::prot_func;  // OK, can access prot_func through B (within B)
-	    &amp;B::priv_func;  // error, cannot access prot_func through B
+	    &amp;B::priv_func;  // error, cannot access priv_func through B
 	  }
 	};</pre></li>
   </ul>
