* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-06-08.
+2004-06-11.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -99,8 +99,10 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.security.SecureClassLoader</td> <td class="needsmerge"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.GregorianCalendar</td> <td class="needsmerge"><a href="compare/java.util.GregorianCalendar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.SimpleTimeZone</td> <td class="needsmerge"><a href="compare/java.util.SimpleTimeZone.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
