Fix recipe to build cc1plus.

--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -148,6 +148,7 @@ you can do the following after a normal configure:</p>
 <pre>
     cd <i>objdir</i>
     make all-libiberty
+    make all-libcpp || true
     make all-intl || true
     make all-libbanshee || true
     make configure-gcc || true
@@ -155,12 +156,12 @@ you can do the following after a normal configure:</p>
     make cc1plus
 </pre>
 
-<p>This will build libiberty, libbanshee, intl and <code>cc1plus</code> (the make of
-<code>configure-gcc</code> is required for configuration changes that
-were added in December 2002; the <code>make all-intl</code> is required for
-configuration changes that were added in July 2003 and <code>make all-libbanshee
-</code> is required as the merge of the tree-ssa in May 2004).  When you have
-<code>cc1plus</code>, you can feed your source code snippet to it:</p>
+<p>This will build libiberty, libcpp, libbanshee, intl and <code>cc1plus</code>
+(<code>make configure-gcc</code> is required since December 2002,
+<code>make all-intl</code> since July 2003, <code>make all-libbanshee</code>
+since the merge of the tree-ssa in May 2004, and <code>make all-libcpp</code>
+since May 2004).  When you have built <code>cc1plus</code>, you can feed your
+source code snippet to it:</p>
 
 <pre>
     cc1plus -quiet <i>testcase</i>.ii
