--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-06-11.
+2004-06-15.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -47,6 +47,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.UtilDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
@@ -97,8 +98,15 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.security.IntersectingDomainCombiner</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.security.ProtectionDomain</td> <td class="needsmerge"><a href="compare/java.security.ProtectionDomain.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.SecureClassLoader</td> <td class="needsmerge"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.BreakIterator</td> <td class="needsmerge"><a href="compare/java.text.BreakIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.DateFormat</td> <td class="needsmerge"><a href="compare/java.text.DateFormat.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.DateFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DateFormatSymbols.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.DecimalFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormatSymbols.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.NumberFormat</td> <td class="needsmerge"><a href="compare/java.text.NumberFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Currency</td> <td class="needsmerge"><a href="compare/java.util.Currency.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.GregorianCalendar</td> <td class="needsmerge"><a href="compare/java.util.GregorianCalendar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
