2004-06-15  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Remove reference to gfortran web page
	from the bottom of the home page and change Fortran 77 `news'
	to `status'.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -165,8 +165,7 @@ It will be part of the GCC 3.4.0 release.
 <a href="news.html">Older news and announcements...</a>
 <br />
 <a href="java/index.html#news">GCJ news</a>
-| <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran 77 news</a>
-| <a href="fortran/index.html">Fortran 95 status</a>
+| <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran 77 status</a>
 
 <include searchbox.ihtml>
 
