Update information related the tree-ssa branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -158,18 +158,12 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <dl>
 
-  <dt><a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></dt>
-  <dd>Work on implementing SSA analysis and optimization for trees
-  is done in this branch.</dd>
-
   <dt>tree-profiling-branch</dt>
-  <dd>A sub-branch of tree-ssa for the development of profiling heuristics
+  <dd>This branch is for the development of profiling heuristics
   and profile based optimizations for trees, such as profile driven inline
   heuristics.  Another goal of this branch is to demonstrate that maintaining
   the CFG and profile information over expanding from GIMPLE trees to RTL
-  is feasible and can bring considerable performance improvements.  This
-  branch shall contain only patches not acceptable for tree-ssa because of
-  the pre-merge freeze.</dd>
+  is feasible and can bring considerable performance improvements.</dd>
 
   <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt>
   <dd>This branch aims at implementing a loop nest optimizer at the
@@ -299,7 +293,8 @@ particular releases or snapshots or the latest snapshot.  </p>
   pch-branch<br />
   gcc-3_4-basic-improvements-branch<br />
   mips-3_4-rewrite-branch<br />
-  dfa-branch</dt>
+  dfa-branch<br />
+  <a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></dt>
   <dd>These branches have been merged into the mainline.</dd>
 
   <dt>cfg-branch</dt>
