--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -186,7 +186,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dt>new-regalloc-branch</dt>
   <dd>Daniel Berlin and Michael Matz are working on an implementation
   of a graph-coloring register allocator on this branch. It is known to
-  bootstrap under x86-linux and ppc-linux.</dd>
+  bootstrap under x86-linux-gnu and ppc-linux-gnu.</dd>
 
   <dt>compile-server-branch</dt>
   <dd>This branch is aimed at improving compile speed by caching work
