Update projects/ia64.html to mention tree-ssa and lno. Originally by Matthew Wilcox <willy@debian.org>.

--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -232,19 +232,11 @@ into regions for compilation, with the goal of reducing compile time."
 <p>Richard Henderson says we could rip out the Haifa scheduler's CFG
 detection, use regular data structures, and fix region detection.</p>
 </li>
+
 <li>Language-independent tree optimizations
-<p>Richard Henderson:  Cool optimizations require more information than
-is available in RTL.  The C and C++ front-ends now render an entire
-function into tree format, but it is transformed into RTL before
-going to the optimization passes.  We need to represent everything
-that is needed to be represented from every language.  Every
-construct doesn't need to be represented; WHIRL (SGI's IL) level 4
-is about what he means.</p>
-
-<p>The IL needs to maintain machine independence longer.</p>
-
-<p>This is one of the projects Mark Mitchell has wanted to do for a
-couple of years.</p>
+<p>Now that the <a href="tree-ssa/">tree-ssa</a> branch has been merged
+into mainline, we can perform cool optimizations that require more
+information than is available in RTL.</p>
 </li>
 
 <li>Inlining: use profile information to guide inlining
@@ -252,7 +244,8 @@ couple of years.</p>
 </li>
 
 <li>High-level loop optimizations
-<p>This requires infrastructure changes.</p>
+<p>The <a href="tree-ssa/lno.html">lno-branch</a> can perform many
+high-level loop optimisations.</p>
 </li>
 
 <li>Hyperblock scheduling
