Update status. By Steve Kargl <sgk@troutmask.apl.washington.edu>.

--- a/htdocs/fortran/librarystatus.html
+++ b/htdocs/fortran/librarystatus.html
@@ -73,7 +73,7 @@ code for these in the library.</p>
 <tr><td>COUNT</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>CPU_TIME</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>CSHIFT</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
-<tr><td>DATE_AND_TIME</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
+<tr><td>DATE_AND_TIME</td><td bgcolor="#FF0000">Implemented</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>DBLE</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>DIGITS</td><td bgcolor="#00FF00">Implemented*</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>DIM</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
@@ -152,7 +152,7 @@ code for these in the library.</p>
 <tr><td>SPREAD</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>SQRT</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>SUM</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
-<tr><td>SYSTEM_CLOCK</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
+<tr><td>SYSTEM_CLOCK</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>TAN</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">NO</td></tr>
 <tr><td>TANH</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">NO</td></tr>
 <tr><td>TINY</td><td bgcolor="#00FF00">Implemented*</td><td bgcolor="#FF0000">NO</td></tr>
