Bootstrap and test results for 3.4.0:
  i586-pc-linux-gnu (SuSE 8.2 with many updates)
  i686-pc-mingw32 (Windows XP Pro, binutils 2.15, mingwrt 3.3, ...)

Bootstrap for 3.4.0:

  i586-pc-linux-gnu (Slackware 9.1, glibc 2.3.2, kernel 2.4.25)
  powerpc-apple-darwin7.3.0< (Mac OS X 10.3)
  powerpc-ibm-aix5.1.0.0

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -96,6 +96,24 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>SuSE 8.2 with many updates</td>
+<td>Bootstrap (C, C++, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00193.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00116.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Slackware 9.1, glibc 2.3.2, kernel 2.4.25</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00320.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -159,6 +177,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-mingw32</td>
+<td>Windows XP Pro, binutils 2.15, mingwrt 3.3, w32api, libiconv 1.9.1</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00761.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00429.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>ia64-hp-hpux11.22</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
@@ -185,9 +213,19 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-apple-darwin7.3.0</td>
-<td>Mac OS X 10.3.1</td>
+<td>Mac OS X 10.3</td>
 <td>Bootstrap (C, C++, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00966.html">3.4.0</a>
+<br />Bootstrap (C, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00443.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.1.0.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00865.html">3.4.0</a>
 </td>
 </tr>
 
