--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -202,10 +202,12 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>as and ld from binutils 2.13.1</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00137.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00503.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00050.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00956.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00917.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00471.html">3.3.1</a>,
@@ -325,6 +327,13 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00752.html">3.3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i586-pc-interix3</td>
+<td>Interix 3.5 on Windows XP</td>
+<td>Bootstrap (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00196.html">3.3</a>
 </tr>
 
 <tr>
@@ -520,8 +529,11 @@ NOTE: the submitter reported that thread support is broken and asked
 <tr>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7</td>
-<td><a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00137.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00047.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00845.html">3.3.3</a>
 </td>
 </tr>
@@ -697,8 +709,10 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Red Hat Advanced Workstation 2.1, binutils 2.14, glibc 2.2.4,
     kernel 2.4.18</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00137.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00052.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00959.html">3.3.3</a>
 </td>
 </tr>
@@ -869,7 +883,17 @@ NOTE: the submitter reported that thread support is broken and asked
 <tr>
 <td>powerpc-ibm-aix4.3.3.0</td>
 <td>&nbsp;</td>
-<td>Bootstrap (C,C++):
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00198.html">3.3.4</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00101.html">3.3.4</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix4.3.3.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2004-01/msg01241.html">3.3.2</a>
 </td>
 </tr>
@@ -905,6 +929,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00881.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00876.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00860.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>hand-crafted, binutils 2.15.90, glibc 2.3.2, kernel 2.6.3</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C, Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00218.html">3.3.4</a>
 </td>
 </tr>
 
@@ -1059,9 +1091,11 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.8</td>
 <td>binutils 2.13.1</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00137.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-02/msg01137.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00070.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00977.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01232.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00980.html">3.3</a>
@@ -1186,6 +1220,16 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00729.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00996.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-linux-gnu</td>
+<td>RHEL WS3, glibc 3.4.3, binutils 2.14.90.0.4, kernel 2.4.21</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-06/msg00137.html">3.3.4</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-06/msg00049.html">3.3.4</a>
 </td>
 </tr>
 
