--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-06-22.
+2004-06-25.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -48,6 +48,7 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.http.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.http.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.nio.SelectorImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.SelectorImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.security.PolicyFile</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
