Update links to the various mail-abuse.org RBLs, as the old ones were being redirected (and at least one of them to 440).

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -264,9 +264,9 @@ about fixing your mail setup.  Spammers are taking advantage of your
 site to relay their spam.</p>
 
 <p>The following RBLs are consulted on all e-mail before it is distributed:
-<a href="http://www.mail-abuse.org/rbl/">MAPS RBL</a>, 
-<a href="http://www.mail-abuse.org/rss/">MAPS RSS</a>, 
-<a href="http://www.mail-abuse.org/dul/">MAPS DUL</a>,
+<a href="http://www.mail-abuse.com/services/mds_rbl.html">MAPS RBL</a>, 
+<a href="http://www.mail-abuse.com/services/mds_rss.html">MAPS RSS</a>, 
+<a href="http://www.mail-abuse.com/services/mds_dul.html">MAPS DUL</a>,
 <a href="http://ordb.org/">ORDB</a>.
 </p>
 
