--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -37,6 +37,7 @@ opposed to development snapshots).</p>
 <tr><th>Release</th><th>internal version</th><th>Release date</th></tr>
 
 <tr><td><a href="gcc-3.4/">GCC 3.4.0</a></td>   <td></td> <td>April 18, 2004</td></tr>
+<tr><td><a href="gcc-3.3/">GCC 3.3.4</a></td>   <td></td> <td>May 31, 2004</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.3</a></td>   <td></td> <td>February 14, 2004</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.2</a></td>   <td></td> <td>October 17, 2003</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.1</a></td>   <td></td> <td>August 8, 2003</td></tr>
