Update with respect to 3.3.4 release

--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -8,13 +8,12 @@
 
 <h1>GCC 3.3 Release Series</h1>
 
-<p>February 24, 2004</p>
+<p>June 28, 2004</p>
 
 <p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.3.3.  This release
-was actually completed on February 14, but technical issues with the
-transition to new security measures for protecting FSF servers required a
-delay in the announcement.</p>
+developers are pleased to announce the release of GCC 3.3.4.  This release
+was actually completed on May 31, but various reasons delayed the
+actual announcement.</p>
 
 <p>The GCC 3.3 release series includes numerous <a href="changes.html">new
 features, improvements, bug fixes, and other changes</a>, thanks to an <a
