Update with respect to 3.3.4

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -49,11 +49,11 @@ to maintain and improve quality.</p>
 </dd>
 
 <dt><strong>Previous release series:</strong>
-  <a href="gcc-3.3/">GCC 3.3.3</a> (released 2004-02-14)
+  <a href="gcc-3.3/">GCC 3.3.4</a> (released 2004-05-31)
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg01392.html">2004-05-28</a>
-  (open for all bugfixes).
+  (open regression fixes only).
 </dd>
 
 <!--
