Convert broken link to Stepanov benchmark to text.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -316,8 +316,7 @@ quality:</p>
 <tr><td>gzip 1.2.4a</td><td>C</td><td>&nbsp;</td>
 </tr>
 <tr><td>Stepanov</td><td>C++</td>
-    <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
-         stepanov_v1p2.C</a></td>
+    <td>ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C</td>
 </tr>
 <tr><td>LAPACK</td><td>Fortran</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
