--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -53,7 +53,7 @@ to maintain and improve quality.</p>
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2004-06/msg01760.html">2004-06-27</a>
-  (open regression fixes only).
+  (open for regression fixes only).
 </dd>
 
 <!--
