Mention removal of features deprecated in 3.4.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -43,6 +43,11 @@
     <li>The <code>-Wstrict-aliasing=2</code> option has been added.  This
         warning catches all unsafe cases, but it may also give a warning for
         some cases that are safe.</li>
+    <li>The cast-as-lvalue, conditional-expression-as-lvalue and
+        compound-expression-as-lvalue extensions, which were
+        deprecated in 3.3.4 and 3.4, have been removed.</li>
+    <li>The <code>-fwritable-strings</code> option, which was
+        deprecated in 3.4, has been removed.</li>
   </ul>
 
 <h2>New Targets and Target Specific Improvements</h2>
