--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-06-27.
+2004-06-30.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -48,11 +48,13 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.UtilDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.awt.EventQueue</td> <td class="needsmerge"><a href="compare/java.awt.EventQueue.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.beans.Expression</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">java.beans.Statement</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.FilePermission</td> <td class="needsmerge"><a href="compare/java.io.FilePermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectOutputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
@@ -202,7 +204,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamResult</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamSource</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">jni/gtk-peer/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.c</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFileDialogPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkFileDialogPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gthread-jni.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gthread-jni.c.diff">Diff</a></td> </tr>
 </table>
