Update for GCC 3.4.1

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -1169,5 +1169,15 @@ in 3.4.0 that are not flagged as 3.4 regressions.</p>
 <hr />
 <h2><a name="3.4.1">GCC 3.4.1</a></h2>
 
+<h3>Bug Fixes</h3>
+
+<p>
+A vast number of bugs have been fixed in 3.4.0, too many to publish a
+complete list here.
+<a
+href="http://gcc.gnu.org/bugzilla/buglist.cgi?short_desc_type=notregexp&amp;short_desc=%5C%5B3%5C.4.*%5BRr%5Degression&amp;target_milestone=3.4.1&amp;bug_status=RESOLVED&amp;resolution=FIXED">Follow
+this link</a> to query the Bugzilla database for the list of bugs
+marked as resolved and fixed in 3.4.1.</p>
+
 </body>
 </html>
