Document "enumerated" terminology.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -244,6 +244,11 @@ and code.  The following table lists some simple cases:</p>
     <td></td>
   </tr>
   <tr>
+    <td>"enumerated"</td>
+    <td>"enumeral"</td>
+    <td>Terminology used in C and C++ standards</td>
+  </tr>
+  <tr>
     <td>"epilogue"</td>
     <td>"epilog"</td>
     <td>Established convention</td>
