--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-06-30.
+2004-07-02.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,6 +19,7 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.EmbeddedWindow</td> <td class="needsmerge"><a href="compare/gnu.java.awt.EmbeddedWindow.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadMutex</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadNativeMethodRunner</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.EncodingManager</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -36,7 +37,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.net.protocol.file.Handler</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.file.Handler.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
-<tr> <td class="needsmerge">gnu.java.net.protocol.http.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.http.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.SelectorImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.SelectorImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
@@ -48,8 +48,9 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.UtilDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">java.awt.EventQueue</td> <td class="needsmerge"><a href="compare/java.awt.EventQueue.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.regexp.CharIndexedInputStream</td> <td class="needsmerge"><a href="compare/gnu.regexp.CharIndexedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.event.InvocationEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.InvocationEvent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">java.beans.Expression</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">java.beans.Statement</td> <td class="libgcj-only">GCJ-only</td> </tr>
@@ -95,6 +96,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.net.URLStreamHandler</td> <td class="needsmerge"><a href="compare/java.net.URLStreamHandler.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.Buffer</td> <td class="needsmerge"><a href="compare/java.nio.Buffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.ByteBuffer</td> <td class="needsmerge"><a href="compare/java.nio.ByteBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.ByteBufferHelper</td> <td class="needsmerge"><a href="compare/java.nio.ByteBufferHelper.diff">Diff</a></td> </tr>
@@ -152,7 +154,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">java.util.zip.ZipEntry</td> <td class="needsmerge"><a href="compare/java.util.zip.ZipEntry.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.imageio.IIOException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadUpdateListener</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -204,6 +205,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamResult</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamSource</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">jni/gtk-peer/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.c</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gthread-jni.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gthread-jni.c.diff">Diff</a></td> </tr>
 </table>
