--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -41,7 +41,7 @@ to maintain and improve quality.</p>
 -->
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.4/">GCC 3.4.0</a> (released 2004-04-20)
+  <a href="gcc-3.4/">GCC 3.4.1</a> (released 2004-07-01)
 </dt><dd>
   Branch status:
   <a href="http://gcc.gnu.org/ml/gcc/2004-06/msg01239.html">2004-06-22</a>
@@ -86,6 +86,11 @@ to maintain and improve quality.</p>
 <h2><small>News/Announcements</small></h2>
 
 <dl>
+
+<dt><b>July 1, 2004</b></dt>
+<dd>
+<a href="gcc-3.4/">GCC 3.4.1</a> has been released.
+</dd>
 
 <dt><b>May 13, 2004</b></dt>
 <dd>
