--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -36,6 +36,7 @@ opposed to development snapshots).</p>
 <table border="1" cellspacing="0" cellpadding="5">
 <tr><th>Release</th><th>internal version</th><th>Release date</th></tr>
 
+<tr><td><a href="gcc-3.4/">GCC 3.4.1</a></td>   <td></td> <td>July 1, 2004</td></tr>
 <tr><td><a href="gcc-3.4/">GCC 3.4.0</a></td>   <td></td> <td>April 18, 2004</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.4</a></td>   <td></td> <td>May 31, 2004</td></tr>
 <tr><td><a href="gcc-3.3/">GCC 3.3.3</a></td>   <td></td> <td>February 14, 2004</td></tr>
