--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -316,7 +316,7 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.4.0 release (April 18 2004)
        |                                    \
        |                                     v 
-       |                                   GCC 3.4.1 release (...)
+       |                                   GCC 3.4.1 release (July 1 2004)
        :
        v
 </pre>
